--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
   <p class="cyan"> $149.99</p>
   <p class="strike">$169.99</p>
   </div>
-<div class="button">
-  <button> 
-    <img src="./images/icon-cart.svg" alt="cart"></img> Add to Cart </button> 
+
+  <button class="btn">
+    <img src="./images/icon-cart.svg">Add to Cart </button> 
  </div>
   </div>
  </div>
